tests/ui/unwind-without-proof/expected
error: The unwind attribute also requires the '#[kani::proof]' attribute
  --> main.rs:13:1
   |
13 | #[kani::unwind(7)]
   | ^^^^^^^^^^^^^^^^^^
   |
